--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,36 +42,15 @@ jobs:
         npm run build
 
     - name: Copy Files to EC2 Instance
-      uses: appleboy/scp-action@master
-      with:
-        host: ${{ secrets.HOST_DNS }}
-        username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.EC2_SSH_KEY }}
-        source: "image-classification-mnist/backend"
-        target: "${{ secrets.TARGET_DIR }}/backend"
-
-    - name: Copy Frontend Build to EC2 Instance
-      uses: appleboy/scp-action@master
-      with:
-        host: ${{ secrets.HOST_DNS }}
-        username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.EC2_SSH_KEY }}
-        source: "image-classification-mnist/frontend/build"
-        target: "${{ secrets.TARGET_DIR }}/frontend"
+      run: |
+        scp -i Keys_for_all_instances.pem -r image-classification-mnist/backend ${{ secrets.USERNAME }}@${{ secrets.HOST_DNS }}:${{ secrets.TARGET_DIR }}/backend
+        scp -i Keys_for_all_instances.pem -r image-classification-mnist/frontend/build ${{ secrets.USERNAME }}@${{ secrets.HOST_DNS }}:${{ secrets.TARGET_DIR }}/frontend
 
     - name: Restart Django Server on EC2
       run: |
-        mkdir -p ${{ github.workspace }}/backend
-        echo "$EC2_SSH_KEY" > ${{ github.workspace }}/key.pem
-        chmod 600 ${{ github.workspace }}/key.pem
-        ssh -i ${{ github.workspace }}/key.pem $USERNAME@${HOST_DNS} "cd $TARGET_DIR/backend && python manage.py runserver" 2>&1 > ${{ github.workspace }}/backend/runserver_output.log
+        ssh -i Keys_for_all_instances.pem ${{ secrets.USERNAME }}@${{ secrets.HOST_DNS }} "cd ${{ secrets.TARGET_DIR }}/backend && python manage.py runserver" 2>&1 > ${{ github.workspace }}/backend/runserver_output.log
         cat ${{ github.workspace }}/backend/runserver_output.log
-      env:
-        EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
-        HOST_DNS: ${{ secrets.HOST_DNS }}
-        USERNAME: ${{ secrets.USERNAME }}
-        TARGET_DIR: ${{ secrets.TARGET_DIR }}
 
     - name: Restart Node.js Server on EC2
       run: |
-        ssh -i ${{ secrets.EC2_SSH_KEY }} ${{ secrets.USERNAME }}@${{ secrets.HOST_DNS }} "cd ${{ secrets.TARGET_DIR }}/frontend && npm start"
+        ssh -i Keys_for_all_instances.pem ${{ secrets.USERNAME }}@${{ secrets.HOST_DNS }} "cd ${{ secrets.TARGET_DIR }}/frontend && npm start"
